third_party/move/move-compiler-v2/tests/checking/typing/declare_wrong_type.exp

Diagnostics:
error: expected `M::R` but found `M::S`
  ┌─ tests/checking/typing/declare_wrong_type.move:6:13
  │
6 │         let S { g } : R;
  │             ^^^^^^^

error: expected `M::R` but found `M::S`
  ┌─ tests/checking/typing/declare_wrong_type.move:7:14
  │
7 │         let (S { g }, R { f }): (R, R);
  │              ^^^^^^^
